<b><u>MAP</u></b>
 - Added the requested option for auto-expiry on a map.
   <span style='color:#ffffff;font-weight:bold;text-transform:uppercase;'>This has been enabled by default on all active maps!!!</span>
 	Automatically remove wormhole connections when they are over their lifetime and should have also despawned ingame.
 	Systems marked as persistant will not be automatically removed.




<h3>March 01, 2017</h3>
<b><u>VIPPY</u></b>
 - Sometimes, if you've manually set your main character Vippy would reset it every once in a while for no apparent reason. This has been fixed.

<b><u>CREST</u></b>
 - Made change that (hopefully) improves the issue of your character jumping back and forth and thus creating fake jumps in the jumplog.




<h3>February 08, 2017</h3>
<b><u>ADMIN</u></b>
 - If you are admin, you can now add <a href="/admin/accesslist" target="_blank">Access Lists</a> to (temporarily) share your map to others, even outside your access-control-group.

<b><u>MAP</u></b>
 - Added an icon on a system that has a notification.
 - Fixed the bug that sometimes frigate wormhole could not be unchecked.

<b><u>CREST</u></b>
 - Location tracking has now been running for some time, it had some problems at first but I managed to tweak and fix the tracker and it should now be running smoothly!
	- There was a weekend where VIPPY became really laggy and unresponsive. This was because of the CREST location tracking.
	- Sometimes fleet tracking and location tracking would have different datasets (because of cache timers).
	  This would result in your characters bouncing back and forth systems (more jump log entries then what was actually jumped anyone?)
  Ofcourse, I will continue to monitor how it is running and make adjustments when needed.
  Help pages will be updated as soon as everything has been running well for atleast a few weeks.



<h3>January 23, 2017</h3>
<b><u>ADMIN</u></b>